# starlist

./: README.md  create-table.js  edges.json  index.html  pyproject.toml  script.py
.github/workflows/: main.yml
